# spot_grid_bot

./: .gitignore  Cargo.toml  trades.db
src/: binance_api.rs  database.rs  grid_trading.rs  main.rs  menu.rs  utils.rs
