[package]
name = "spot_grid_bot_v3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.27", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
dotenvy = "0.15.7"

